2026-04 Feature Update for NRFZ

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 </head>
 
 <style>
-    .card-content {
+    /* .card-content {
         opacity: 1 !important;
         visibility: visible !important;
         position: absolute !important;
-    }
+    } */
 </style>
 
 <body>
@@ -134,34 +134,42 @@
                 <div class="wbnrfz-grid wow fadeIn" data-wow-delay="50ms">
                     <div class="card">
                         <a href="https://worksbynrfz.com/buszy">
-                        <img src="https://i.imgur.com/fekfd0k.png" alt="Work 1">
-                        <div class="card-content">
-                            <h3>Buszy - Bus Arrival Timings</h3>
-                        </div>
+                            <img src="https://i.imgur.com/fekfd0k.png" alt="Work 1">
+                            <div class="card-content">
+                                <h3>Buszy - Bus Arrival Timings</h3>
+                                <a href="https://worksbynrfz.com/buszy" class="pw-btn-small btn-2"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="https://worksbynrfz.com/rail-buddy">
-                        <img src="https://i.imgur.com/498xWqm.png" alt="Work 2">
-                        <div class="card-content">
-                            <h3>RailBuddy - Stay on track, always</h3>
-                        </div>
+                            <img src="https://i.imgur.com/498xWqm.png" alt="Work 2">
+                            <div class="card-content">
+                                <h3>RailBuddy - Stay on track, always</h3>
+                                <a href="https://worksbynrfz.com/rail-buddy" class="pw-btn-small btn-2"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="eicw/eicw.html">
-                        <img src="https://i.imgur.com/HaCQ71l.png" alt="Work 3">
-                        <div class="card-content">
-                            <h3>EICW - Implementation Brainstorming</h3>
-                        </div>
+                            <img src="https://i.imgur.com/HaCQ71l.png" alt="Work 3">
+                            <div class="card-content">
+                                <h3>EICW - Implementation Brainstorming</h3>
+                                <a href="eicw/eicw.html" class="pw-btn-small btn-2"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
                         </a>
                     </div>
                     <div class="card">
                         <a href="worksbynrfz/lta-bp.html">
-                        <img src="https://i.imgur.com/IeRTJiV.png" alt="Work 4">
-                        <div class="card-content">
-                            <h3>LTA Bus Stop Pole Design Refresh</h3>
-                        </div>
+                            <img src="https://i.imgur.com/IeRTJiV.png" alt="Work 4">
+                            <div class="card-content">
+                                <h3>LTA Bus Stop Pole Design Refresh</h3>
+                                <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i
+                                        class="fa-solid fa-arrow-right"></i></a>
+                            </div>
                         </a>
                     </div>
                 </div>
