--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -251,7 +251,7 @@
             <img src="https://i.imgur.com/fekfd0k.png" alt="buszy">
             <div class="card-content">
               <h3>Buszy - Bus Arrival Timings</h3>
-              <a href="worksbynrfz/buszy.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+              <a href="https://worksbynrfz.com/buszy" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -259,7 +259,7 @@
             <img src="https://i.imgur.com/kO8E6vB.png" alt="rlb-v4">
             <div class="card-content">
               <h3>RailBuddy - Stay on track, always</h3>
-              <a href="worksbynrfz/delays-checker.html" class="pw-btn-small btn-2"><i
+              <a href="https://worksbynrfz.com/rail-buddy" class="pw-btn-small btn-2"><i
                   class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
