2026-04 Feature Update for NRFZ

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -262,8 +262,10 @@
     </div>
   </section>
 
+  <hr>
+
   <!-- Section Content 1 -->
-  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;" id="psrith">
+  <section class="about-me-summ clearfix" style="padding-bottom: 10px; padding-top: 3em;" id="psrith">
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
