2026-04 Feature Update for NRFZ

--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -414,7 +414,7 @@
 
                 <div class="video-row">
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/door-old.mp4" type="video/mp4">
                       Your browser does not support the video tag.
@@ -425,7 +425,7 @@
                   </figure>
 
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/door-old-r.mp4" type="video/mp4">
                       Your browser does not support the video tag.
@@ -438,7 +438,7 @@
 
                 <div class="video-row">
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/door-new.mp4" type="video/mp4">
                       Your browser does not support the video tag.
@@ -449,7 +449,7 @@
                   </figure>
 
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/door-new-r.mp4" type="video/mp4">
                       Your browser does not support the video tag.
@@ -468,7 +468,7 @@
 
                 <div class="video-row">
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/arr-jur.mp4" type="video/mp4">
                       Your browser does not support the video tag.
@@ -479,7 +479,7 @@
                   </figure>
 
                   <figure style="width:100%;">
-                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                    <video id="eicw2-vid2" controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
                       <source src="img-2/arr-wdl.mp4" type="video/mp4">
                       Your browser does not support the video tag.
