--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -349,7 +349,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw-vid1" autoplay controls controlsList="nodownload"
+                                        <video id="eicw-vid1" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw-vid1-light.mp4" type="video/mp4">
@@ -392,7 +392,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw-vid2" autoplay controls controlsList="nodownload"
+                                        <video id="eicw-vid2" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw-vid2-light.mp4" type="video/mp4">
@@ -455,7 +455,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw-vid3" autoplay controls controlsList="nodownload"
+                                        <video id="eicw-vid3" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw-vid3-light.mp4" type="video/mp4">
@@ -500,7 +500,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw-vid4" autoplay controls controlsList="nodownload"
+                                        <video id="eicw-vid4" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw-vid4-light.mp4" type="video/mp4">
@@ -570,14 +570,14 @@
                                         </div>
                                     </div>
 
-                                    <video id="eicw-vid5" autoplay controls controlsList="nodownload"
+                                    <video id="eicw-vid5" controls controlsList="nodownload"
                                         oncontextmenu="return false;" muted loop playsinline width="100%"
                                         class="column-vid">
                                         <source src="img/eicw-vid5-light.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
 
-                                    <video id="eicw-vid6" autoplay controls controlsList="nodownload"
+                                    <video id="eicw-vid6" controls controlsList="nodownload"
                                         oncontextmenu="return false;" muted loop playsinline width="100%"
                                         class="column-vid">
                                         <source src="img/eicw-vid6-light.mp4" type="video/mp4">
@@ -625,7 +625,7 @@
                                         </div>
                                     </div>
 
-                                    <video id="eicw-vid7" autoplay controls controlsList="nodownload"
+                                    <video id="eicw-vid7" controls controlsList="nodownload"
                                         oncontextmenu="return false;" muted loop playsinline width="100%"
                                         class="column-vid">
                                         <source src="img/eicw-vid7-light.mp4" type="video/mp4">
@@ -675,7 +675,7 @@
                                         </div>
                                     </div>
 
-                                    <video id="eicw-vid8" autoplay controls controlsList="nodownload"
+                                    <video id="eicw-vid8" controls controlsList="nodownload"
                                         oncontextmenu="return false;" muted loop playsinline width="100%"
                                         class="column-vid">
                                         <source src="img/eicw-vid8-light.mp4" type="video/mp4">
@@ -1059,7 +1059,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw2-vid1" autoplay controls controlsList="nodownload"
+                                        <video id="eicw2-vid1" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw2-vid1-light.mp4" type="video/mp4">
@@ -1130,7 +1130,7 @@
                                             </figcaption>
                                         </div>
 
-                                        <video id="eicw2-vid2" autoplay controls controlsList="nodownload"
+                                        <video id="eicw2-vid2" controls controlsList="nodownload"
                                             oncontextmenu="return false;" muted loop playsinline width="100%"
                                             class="column-vid">
                                             <source src="img/eicw2-vid2-light.mp4" type="video/mp4">
