--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -335,7 +335,7 @@
             </figcaption>
           </div>
 
-          <video id="eicw-vid9" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop
+          <video id="eicw-vid9" controls controlsList="nodownload" oncontextmenu="return false;" muted loop
             playsinline width="100%" class="column-vid" style="margin-top: 2em;">
             <source src="img/eicw-vid9-light.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -474,7 +474,7 @@
             </figcaption>
           </div>
 
-          <video id="eicw-vid10" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop
+          <video id="eicw-vid10" controls controlsList="nodownload" oncontextmenu="return false;" muted loop
             playsinline width="100%" class="column-vid" style="margin-top: 2em;">
             <source src="img/eicw-vid10-light.mp4" type="video/mp4">
             Your browser does not support the video tag.
