--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </div>
 
                     </div>
-                    <div class="card">
+                    <div class="card" style="background-color: #6c6c67;">
                         <img src="https://i.imgur.com/498xWqm.png" alt="Work 2">
                         <div class="card-content">
                             <h3>RailBuddy - Stay on track, always</h3>
