--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -255,7 +255,7 @@
             </div>
           </div>
 
-          <div class="card in" data-date="2025-01-01">
+          <div class="card in" data-date="2026-02-01">
             <img src="https://i.imgur.com/kO8E6vB.png" alt="rlb-v4">
             <div class="card-content">
               <h3>RailBuddy - Stay on track, always</h3>
@@ -268,7 +268,7 @@
             <img src="https://i.imgur.com/HaCQ71l.png" alt="eicw-brainstorm">
             <div class="card-content">
               <h3>EICW - Implementation Brainstorming</h3>
-              <a href="worksbynrfz/improve-wf.html" class="pw-btn-small btn-2"><i
+              <a href="eicw/eicw.html" class="pw-btn-small btn-2"><i
                   class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
