--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -238,14 +238,14 @@
                   <h2 class="text-center"
                     style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">My redesigns are not
                     radical.</h2>
-                  <p style="text-align: justify;">People often design their own concepts based on how they want it to
+                  <p>People often design their own concepts based on how they want it to
                     look
                     like, rather than how it should look like. My redesigns are not about changing the entire
                     design of the Wayfinding System, but rather improving on the existing design to make it more
                     user-friendly and accessible to all users. I do not believe in creating another Design System, when
                     the current ones are barely a decades old.</p>
 
-                  <p style="text-align: justify;">Honestly, each designs and UIs you see in real-life are not entirely
+                  <p>Honestly, each designs and UIs you see in real-life are not entirely
                     bad. So in this section, I'll bring you through my thought process in redesigning these elements.
                   </p>
                 </div>
@@ -283,7 +283,7 @@
                 Reader UI (LTA)
               </h2>
               </h2>
-              <p style="text-align: justify;">The current Bus Card Readers are getting old. Hence, the UI will need a
+              <p>The current Bus Card Readers are getting old. Hence, the UI will need a
                 refresh as well!
                 Had a quick look at the upcoming Card Readers that are being trialled on selected buses, and I feel the
                 UI is good! I have decided to make a guess on how the UI could look like, and also incorporated some
@@ -296,7 +296,7 @@
                     <a href="img-2/bcr-compare-light.png" id="bcrcrc" class="portfolio-img ">
                       <img src="img-2/bcr-compare-light.png" id="bcrcrc-img" class="img-fluid cp-img" alt="bcrcrc">
                     </a>
-                    <p style="text-align: justify;">📸: <br>
+                    <p>📸: <br>
                       - <a
                         href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
                         MRT Card Reader</a><br>
@@ -342,7 +342,7 @@
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="staris2">STARiS 2 (SMRT)
               </h2>
-              <p style="text-align: justify;">The current STARiS 2's UI is about 16 years old, and it recently got a
+              <p>The current STARiS 2's UI is about 16 years old, and it recently got a
                 minor upgrade, though only for the Next Stop and Station Name Screens. A major redesign is needed to
                 align with the current design used on the R151s, but at the same time I wanted to retain some elements
                 from the current STARiS UI.
@@ -354,7 +354,7 @@
                     <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI - <b>Updated</b>
+                    <p>Revamped STARiS 2.0 UI - <b>Updated</b>
                       Line
                       Diagram Layout and <b>New</b> Next Station Interface
                     </p>
@@ -366,7 +366,7 @@
                     <a href="img-2/staris2-D-stn.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-D-stn.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI - <b>Updated</b>
+                    <p>Revamped STARiS 2.0 UI - <b>Updated</b>
                       Station Name Interface
                     </p>
                   </figcaption>
@@ -374,10 +374,10 @@
 
                 <hr>
 
-                <p style="text-align: justify; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                <p style="margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
                   It's time for a makeover.</p>
 
-                <p style="text-align: justify;">As mentioned, I wanted to retain some elements from the current STARiS
+                <p>As mentioned, I wanted to retain some elements from the current STARiS
                   UI,
                   hence I kept the Line Diagram layout similar to the current one, modernized with a newer Doors Closing
                   animation and also a simplified Arrival Screen.
@@ -406,7 +406,7 @@
                   Doors Closing Animation
                 </h3>
 
-                <p style="text-align: justify;">The Door Closing Animations pays homage to the countdown, now presented
+                <p>The Door Closing Animations pays homage to the countdown, now presented
                   in a different manner. The two blinking arrow replaces the numbered countdown, giving a more dynamic
                   feel to
                   it.
@@ -420,7 +420,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Original Doors Closing Animation - Left Screen</p>
+                      <p>Original Doors Closing Animation - Left Screen</p>
                     </figcaption>
                   </figure>
 
@@ -431,7 +431,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Original Doors Closing Animation - Right Screen</p>
+                      <p>Original Doors Closing Animation - Right Screen</p>
                     </figcaption>
                   </figure>
                 </div>
@@ -444,7 +444,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Revamped Doors Closing Animation - Left Screen</p>
+                      <p>Revamped Doors Closing Animation - Left Screen</p>
                     </figcaption>
                   </figure>
 
@@ -455,7 +455,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Revamped Doors Closing Animation - Right Screen</p>
+                      <p>Revamped Doors Closing Animation - Right Screen</p>
                     </figcaption>
                   </figure>
                 </div>
@@ -474,7 +474,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Revamped Arrival Animation Example 1 - Jurong East [A]</p>
+                      <p>Revamped Arrival Animation Example 1 - Jurong East [A]</p>
                     </figcaption>
                   </figure>
 
@@ -485,7 +485,7 @@
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
-                      <p style="text-align: justify;">Revamped Arrival Animation Example 2 - Woodlands [A]</p>
+                      <p>Revamped Arrival Animation Example 2 - Woodlands [A]</p>
                     </figcaption>
                   </figure>
                 </div>
