--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -237,7 +237,7 @@
                   <h2 class="text-center"
                     style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
                     Changes</h2>
-                  <p style="text-align: justify;">In aligning with the current Wayfinding System, I have incorporated
+                  <p>In aligning with the current Wayfinding System, I have incorporated
                     the
                     elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
                     navigate and understand the information presented, regardless of their familiarity with the system.
@@ -286,7 +286,7 @@
                 Reader UI (LTA)
               </h2>
               </h2>
-              <p style="text-align: justify;">The current Bus Card Readers are getting replaced! As such, I have come up
+              <p>The current Bus Card Readers are getting replaced! As such, I have come up
                 with a design whereby the Interface match the ones used on the MRT systems, particularly the NSEWL and
                 CCL. For those MRT lines, they too, are getting their faregates replaced. As we can see, we're
                 progressively going for a more full-screen approach, where you will tap your card on the screen itself.
@@ -320,7 +320,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="bat">Bus Arrival
                 Timings (LTA)
               </h2>
-              <p style="text-align: justify;">The new panels are an improved version with vibrant graphics and bigger
+              <p>The new panels are an improved version with vibrant graphics and bigger
                 fonts and provide information that allows commuters to better plan their journeys. I have redesigned it
                 to match the current design system standards.</p>
 
@@ -341,7 +341,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
                 (TEL)
               </h2>
-              <p style="text-align: justify;"> For the LCD screens on the TEL trains, I have redesigned it to look
+              <p> For the LCD screens on the TEL trains, I have redesigned it to look
                 exactly
                 like the other counterparts on the NSL, EWL, NEL and CCL.</p>
 
@@ -362,7 +362,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="staris2">STARiS
                 2.0 (SMRT)
               </h2>
-              <p style="text-align: justify;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it
+              <p> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it
                 to
                 look
                 exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
@@ -374,7 +374,7 @@
                     <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
                       <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
+                    <p>Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
                       Line
                       Diagram Layout.
                     </p>
@@ -387,7 +387,7 @@
                     <a href="img/staris2-C.png" id="staris2-c" class="portfolio-img ">
                       <img src="img/staris2-C.png" id="staris2-c-img" class="img-fluid cp-img" alt="staris2-c">
                     </a>
-                    <p style="text-align: justify;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
+                    <p>Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
                       Diagram Layout.
                     </p>
                   </figcaption>
@@ -398,7 +398,7 @@
                     <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI, on most of the KSFC Trains. <b>Updated</b>
+                    <p>Revamped STARiS 2.0 UI, on most of the KSFC Trains. <b>Updated</b>
                       Line
                       Diagram Layout and <b>New</b> Next Station Interface
                     </p>
@@ -410,7 +410,7 @@
                     <a href="img-2/staris2-red.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-red.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
+                    <p>Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
                     </p>
                   </figcaption>
                 </div>
@@ -439,7 +439,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door
                 Display (BPLRT)
               </h2>
-              <p style="text-align: justify;"> For the LCD screens on the new C801B trains, I have redesigned it to
+              <p> For the LCD screens on the new C801B trains, I have redesigned it to
                 look
                 exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
                 starting to look old, and the design does not match current design standards.</p>
@@ -450,7 +450,7 @@
                     <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
                       <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
                     </a>
-                    <p style="text-align: justify;">Current CDD UI Design on the C801B Trains.
+                    <p>Current CDD UI Design on the C801B Trains.
                     </p>
                   </figcaption>
                 </div>
