2026-04 Feature Update for NRFZ

--- a/menu.html
+++ b/menu.html
@@ -319,7 +319,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="list-group">
-                <a href="works-by-nrfz.html"
+                <a href="about.html"
                     class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
@@ -336,10 +336,19 @@
                     </div>
                 </a>
 
-                <a href="install-guides.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="labs.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-regular fa-comment-dots"></i>&nbsp; Install Guides</h5>
+                            <h5 class="lg-menu"><i class="fa-regular fa-flask"></i>&nbsp; Labs</h5>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="install-guides.html"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-menu"><i class="fa-regular fa-book-open"></i>&nbsp; Install Guides</h5>
                         </div>
                     </div>
                 </a>
@@ -349,7 +358,8 @@
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-regular fa-sun-bright" id="theme-icon-desktop"></i>&nbsp;
-                                <span id="theme-text-desktop">Display: Light</span></h5>
+                                <span id="theme-text-desktop">Display: Light</span>
+                            </h5>
                         </div>
                     </div>
                 </a>
